# chad-weblog-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
migrations/: 20230807053233_init.down.sql  20230807053233_init.up.sql
py/: Dockerfile
py/tools/: test_script.py
py/tools/webscraper/webscraper/: items.py  pipelines.py  settings.py
py/tools/webscraper/webscraper/spiders/: balance_sheet.py  futumoomoo.py  symbol.csv
src/: app_state.rs  error.rs  main.rs  pagination.rs  response.rs  routine.rs
src/model/: mail.rs  mod.rs  stock.rs  user.rs
src/routes/: auth.rs  mail.rs  mod.rs  stock.rs
tests/: dev.rs
